
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
struct TYPE_2__ {scalar_t__ s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
typedef int fd_set ;
typedef int error ;


 int AF_INET ;
 int EINPROGRESS ;
 int ETIMEDOUT ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int F_GETFL ;
 int F_SETFL ;
 int O_NONBLOCK ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_ERROR ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int errno ;
 int fcntl (int,int ,int) ;
 scalar_t__ getsockopt (int,int ,int ,int*,int*) ;
 int htons (unsigned short) ;
 scalar_t__ net_resolve (char*) ;
 int select (int,int *,int *,int *,struct timeval*) ;
 int socket (int ,int ,int ) ;

int

net_connect (struct sockaddr_in *cs, char *server,

        unsigned short int port, int sec)

{

        int n, len, error, flags;

        int fd;

        struct timeval tv;

        fd_set rset, wset;





        cs->sin_family = AF_INET;

        cs->sin_port = htons (port);

        fd = socket (cs->sin_family, SOCK_STREAM, 0);

        if (fd == -1)

                return (-1);



        cs->sin_addr.s_addr = net_resolve (server);

        if (cs->sin_addr.s_addr == 0) {

                close (fd);

                return (-1);

        }



        flags = fcntl (fd, F_GETFL, 0);

        if (flags == -1) {

                close (fd);

                return (-1);

        }

        n = fcntl (fd, F_SETFL, flags | O_NONBLOCK);

        if (n == -1) {

                close (fd);

                return (-1);

        }



        error = 0;



        n = connect (fd, (struct sockaddr *) cs, sizeof (struct sockaddr_in));

        if (n < 0) {

                if (errno != EINPROGRESS) {

                        close (fd);

                        return (-1);

                }

        }

        if (n == 0)

                goto done;



        FD_ZERO(&rset);

        FD_ZERO(&wset);

        FD_SET(fd, &rset);

        FD_SET(fd, &wset);

        tv.tv_sec = sec;

        tv.tv_usec = 0;



        n = select(fd + 1, &rset, &wset, ((void*)0), &tv);

        if (n == 0) {

                close(fd);

                errno = ETIMEDOUT;

                return (-1);

        }

        if (n == -1)

                return (-1);



        if (FD_ISSET(fd, &rset) || FD_ISSET(fd, &wset)) {

                if (FD_ISSET(fd, &rset) && FD_ISSET(fd, &wset)) {

                        len = sizeof(error);

                        if (getsockopt(fd, SOL_SOCKET, SO_ERROR, &error, &len) < 0) {

                                errno = ETIMEDOUT;

                                return (-1);

                        }

                        if (error == 0) {

                                goto done;

                        } else {

                                errno = error;

                                return (-1);

                        }

                }

        } else

                return (-1);



done:

        n = fcntl(fd, F_SETFL, flags);

        if (n == -1)

                return (-1);



        return (fd);

}
